# DOPE3

./: .coverage  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
docs/: index.md
dope3/: dope.py
tests/: .coverage  coverage.xml  report.html  report.xml  test_dope.py
