[tool.poetry]
name = "DOPE"
version = "2.0.3"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pycryptodome = "^3.10.1"
bchlib = "^0.14.0"
dill = "^0.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
